--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ header {
 
 header h1 {
    font-weight: bold; 
-   margin: 0;
+   margin: 10px;
    font-size: 4vw;
    color: var(--primary-color);
    background-color: var(--light);
@@ -61,9 +61,7 @@ nav {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: center;
-    position: absolute;
-    width: 100%;
+    margin: 5px;
 }
 
 nav a {
@@ -226,24 +224,24 @@ main {
     background-size: 100% 100%;
 }
 
-.surf-report {
-    background-image: url(images/surf.jpeg);
+.weather-report {
+    background-image: url(images/weather-report.jpg);
 }
 
-.led-wall {
-    background-image: url(images/led-wall.jpeg);
+.day-planner {
+    background-image: url(images/day-planner.jpg);
 }
 
-.calc {
-    background-image: url(images/calculator.jpeg);
+.quiz {
+    background-image: url(images/quiz.gif);
 }
 
-.pastel-puzzles {
-    background-image: url(images/pastel.jpeg);
+.team-generator {
+    background-image: url(images/team-generator.gif);
 }
 
-.run-buddy {
-    background-image: url(images/runbuddy.jpeg);
+.note-taker {
+    background-image: url(images/note-taker.gif);
 }
 
 .music-search {
@@ -256,17 +254,18 @@ main {
       justify-content: center;
       text-align: center;
     }
-  
+
     header h1 {
-      width: 100%;
-      padding: 5px;
-      margin-bottom: 10px;
-      font-size: 10vw;
+    width: 100%;
+    padding: 5px;
+    margin-bottom: 10px;
+    font-size: 10vw; 
     }
   
     header nav {
-      justify-content: center;
-    }
+        justify-content: right;
+      }
+    
   
     .page-section > h2,
     .page-section > div {
@@ -281,7 +280,7 @@ main {
       text-align: left;
       font-size: 7vw;
     }
-  }
+}
   
   @media screen and (max-width: 768px) {
     .grid-item,
