added 2nd project

--- a/style.css
+++ b/style.css
@@ -236,8 +236,8 @@ main {
     background-image: url(images/quiz.gif);
 }
 
-.team-generator {
-    background-image: url(images/team-generator.gif);
+.movie-lists {
+    background-image: url(images/movieThumbs.jpg);
 }
 
 .note-taker {
